Bug 98089 - Fix double printing function name in _dbus_verbose() messages.
Summary: Fix double printing function name in _dbus_verbose() messages.
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: All All
: medium normal
Assignee: D-Bus Maintainers
QA Contact: D-Bus Maintainers
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-05 07:58 UTC by Ralf Habacker
Modified: 2016-10-05 13:15 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix double printing function name in _dbus_verbose() messages. (1.80 KB, patch)
2016-10-05 07:58 UTC, Ralf Habacker
Details | Splinter Review
Fix double printing function name in _dbus_verbose() messages. (1.80 KB, patch)
2016-10-05 10:28 UTC, Ralf Habacker
Details | Splinter Review

Description Ralf Habacker 2016-10-05 07:58:36 UTC

    
Comment 1 Ralf Habacker 2016-10-05 07:58:38 UTC
Created attachment 127020 [details] [review]
Fix double printing function name in _dbus_verbose() messages.
Comment 2 Simon McVittie 2016-10-05 09:02:32 UTC
Comment on attachment 127020 [details] [review]
Fix double printing function name in _dbus_verbose() messages.

Review of attachment 127020 [details] [review]:
-----------------------------------------------------------------

Fine, except that you're introducing verbose logging that wasn't previously there.

::: dbus/dbus-transport.c
@@ +1145,4 @@
>  {
>    DBusDispatchStatus status;
>  
> +  _dbus_verbose ("enter\n");

This was previously #if 0. I suspect this may have been because this function is frequently called, so it was so ridiculously verbose that it makes DBUS_VERBOSE even less useful than it already is?
Comment 3 Ralf Habacker 2016-10-05 10:20:21 UTC
(In reply to Simon McVittie from comment #2)
> Comment on attachment 127020 [details] [review] [review]
> Fix double printing function name in _dbus_verbose() messages.
> 
> Review of attachment 127020 [details] [review] [review]:
> -----------------------------------------------------------------
> 
> Fine, except that you're introducing verbose logging that wasn't previously
> there.
> 
> ::: dbus/dbus-transport.c
> @@ +1145,4 @@
> >  {
> >    DBusDispatchStatus status;
> >  
> > +  _dbus_verbose ("enter\n");
> 
> This was previously #if 0. I suspect this may have been because this
> function is frequently called, so it was so ridiculously verbose that it
> makes DBUS_VERBOSE even less useful than it already is?

Okay, I will wrap this hunk with #if 0 ...#endif, so that people want to debug cant change that.
Comment 4 Ralf Habacker 2016-10-05 10:28:23 UTC
Created attachment 127022 [details] [review]
Fix double printing function name in _dbus_verbose() messages.

Bug:
Comment 5 Ralf Habacker 2016-10-05 13:15:47 UTC
Attachment 127022 [details] pushed as 487a26f - Fix double printing function name in _dbus_verbose() messages.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.