dbus/dbus-sysdeps-util-win.c
@@ -305,7 +305,7 @@ void
 _dbus_set_signal_handler (int               sig,
                           DBusSignalHandler handler)
 {
-  _dbus_verbose ("_dbus_set_signal_handler() has to be implemented\n");
+  _dbus_verbose ("has to be implemented\n");
 }
 
 /**
